# teleprompter-seed

./: .gitignore  README.md  SEED.md
teleprompter/: README.md  sample-roteiro.md
teleprompter/backend/: pyproject.toml
teleprompter/backend/api/: __init__.py  config.py  main.py
teleprompter/backend/api/models/: __init__.py  base.py  teleprompter.py
teleprompter/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
teleprompter/frontend/src/: App.tsx  index.css  main.tsx
teleprompter/frontend/src/components/: CircularCountdown.tsx  Controls.tsx  Display.tsx  Editor.tsx
teleprompter/frontend/src/components/ui/: shiny-button.tsx  shooting-stars.tsx  spotlight-card.tsx
teleprompter/frontend/src/hooks/: useKeyboard.ts  useLocalStorage.ts  useScroller.ts  useWebSocket.ts
teleprompter/frontend/src/styles/: design-tokens.css
teleprompter/frontend/src/types/: index.ts
teleprompter/frontend/src/utils/: audio.ts  ntp.ts  speechProfile.ts  textParser.ts  time.ts
teleprompter/scripts/: send_roteiros.py  verify_teleprompter.py
verify/: hydrate-and-verify.sh  layer1.py  layer2.mjs  probe.mjs
