[project]
name = "teleprompter-backend"
version = "0.1.0"
description = "Local teleprompter sync backend (FastAPI + WebSocket)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.1",
    "python-dotenv>=1.1.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.4.0",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
